# fifa-world-cup-simulator

./: .clang-format  .gitignore  CMakeLists.txt  README.md  run.sh
data/: goalkeepers.csv  players.csv
data/dynamic/: gk_stats.csv  matches.csv  players_stats.csv  tournament_state.csv  tournament_teams.csv
data/static/: countries.csv  goalkeepers.csv  players.csv  wc_2026_groups.csv
data/tournaments/: wc_2026.cfg
docs/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md
include/: awards.h  config.h  crud.h  display.h  enums.h  file_io.h  platform.h  simulation.h  structs.h  tournament.h  utility.h  validation.h
scripts/: run_display_test.sh  run_file_io_test.sh  run_simulation_test.sh  run_tournament_test.sh
src/: awards.c  crud.c  display.c  file_io.c  main.c  simulation.c  test.c  tournament.c  utility.c  validation.c
tests/: test.c  test_display.c  test_file_io.c  test_simulation.c  test_tournament.c  test_utils.c  test_utils.h
